[FIX] website: center background images
Before this commit, background images were not centered by default.
It was especially annoying on mobile device.

Part of #55857

task-2318526

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -348,6 +348,7 @@ font[class*='bg-'] {
 .oe_img_bg {
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
 
     &.o_bg_img_opt_repeat {
         background-size: auto;
